--- a/plugins/dashboard-widgets-plugin/package.json
+++ b/plugins/dashboard-widgets-plugin/package.json
@@ -16,7 +16,7 @@
         "build": "rimraf dist && tsc --build",
         "watch": "tsc --build --watch",
         "lint": "eslint --fix .",
-        "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
+        "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server --td && zeus http://localhost:3000/admin-api ./src/plugin-ui --td"
     },
     "dependencies": {
         "@graphql-typed-document-node/core": "^3.2.0",
@@ -26,6 +26,7 @@
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
+        "@deenruv/admin-types": "workspace:*",
         "@nestjs/common": "~10.3.10",
         "@nestjs/graphql": "~12.2.0",
         "@tanstack/react-table": "^8.15.3",
