--- a/plugins/dashboard-widgets-plugin/package.json
+++ b/plugins/dashboard-widgets-plugin/package.json
@@ -20,28 +20,28 @@
     },
     "dependencies": {
         "@graphql-typed-document-node/core": "^3.2.0",
-        "react": "^18.2.0"
-    },
-    "devDependencies": {
+        "react": "^18.2.0",
+        "lucide-react": "^0.363.0",
+        "@deenruv/react-ui-devkit": "workspace:*",
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
-        "@deenruv/react-ui-devkit": "workspace:*",
         "@deenruv/admin-types": "workspace:*",
         "@nestjs/common": "~10.3.10",
         "@nestjs/graphql": "~12.2.0",
         "@tanstack/react-table": "^8.15.3",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
         "date-fns": "^4.1.0",
         "graphql-tag": "^2.12.6",
         "graphql-zeus": "^7.0.0",
-        "lucide-react": "^0.363.0",
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
-        "rimraf": "^5.0.10",
         "sonner": "^1.4.41",
-        "typeorm": "0.3.20",
-        "typescript": "5.3.3"
+        "typeorm": "0.3.20"
+    },
+    "devDependencies": {
+        "rimraf": "^5.0.10",
+        "typescript": "5.3.3",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0"
     }
 }
