--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsdoc": "^45.0.0",
-        "eslint-plugin-prefer-arrow": "^1.2.3"
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-tailwindcss": "^3.18.0"
     },
     "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
