--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,19 @@
 packages:
-  - "packages/*"
-  - "plugins/*"
-  - "apps/*"
+  - packages/*
+  - plugins/*
+  - apps/*
+onlyBuiltDependencies:
+  - '@apollo/protobufjs'
+  - '@nestjs/core'
+  - '@parcel/watcher'
+  - '@swc/core'
+  - bcrypt
+  - better-sqlite3
+  - esbuild
+  - husky
+  - msgpackr-extract
+  - nice-napi
+  - protobufjs
+  - puppeteer
+  - sharp
+  - sqlite3
