--- a/packages/ui-devkit/package.json
+++ b/packages/ui-devkit/package.json
@@ -28,9 +28,7 @@
     "build:client": "rimraf ./client && rollup -c rollup.config.mjs --configProduction",
     "build:compiler": "rimraf ./compiler && tsc -p tsconfig.compiler.json",
     "build": "npm run build:client && npm run build:compiler",
-    "watch": "rimraf ./lib && rollup -c rollup.config.mjs -w",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "watch": "rimraf ./lib && rollup -c rollup.config.mjs -w"
   },
   "bugs": {
     "url": "https://github.com/deenruv-ecommerce/deenruv/issues"
