--- a/plugins/replicate-simple-bg-plugin/package.json
+++ b/plugins/replicate-simple-bg-plugin/package.json
@@ -31,11 +31,14 @@
     "sonner": "^1.4.41",
     "@nestjs/common": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
-    "typeorm": "^0.3.20",
     "graphql-tag": "^2.12.6",
     "replicate": "1.0.1"
   },
+  "peerDependencies": {
+    "typeorm": "^0.3.20"
+  },
   "devDependencies": {
+    "typeorm": "^0.3.20",
     "typescript": "5.3.3",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/react": "^18.2.0",
