--- a/plugins/replicate-simple-bg-plugin/package.json
+++ b/plugins/replicate-simple-bg-plugin/package.json
@@ -19,30 +19,31 @@
     "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server --es --td && zeus http://localhost:3000/admin-api ./src/plugin-ui --es --td"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
     "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
-    "@deenruv/admin-types": "workspace:^",
-    "react-i18next": "^14.0.5",
-    "react-router-dom": "^6.22.1",
-    "graphql-zeus": "^7.0.0",
-    "lucide-react": "^0.363.0",
-    "sonner": "^1.4.41",
     "@nestjs/common": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
     "graphql-tag": "^2.12.6",
-    "replicate": "1.0.1"
+    "graphql-zeus": "^7.0.0",
+    "lucide-react": "^0.363.0",
+    "react": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-i18next": "^14.0.5",
+    "react-router-dom": "^6.22.1",
+    "replicate": "1.0.1",
+    "sonner": "^1.4.41"
   },
   "peerDependencies": {
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "typeorm": "^0.3.20",
-    "typescript": "5.3.3",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "rimraf": "^5.0.10"
+    "rimraf": "^5.0.10",
+    "typeorm": "^0.3.20",
+    "typescript": "5.3.3"
   }
 }
