--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -59,6 +59,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.20.5",
+    "@tanstack/react-virtual": "^3.13.8",
     "@tiptap/extension-document": "^2.8.0",
     "@tiptap/extension-heading": "^2.8.0",
     "@tiptap/extension-paragraph": "^2.8.0",
