--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "pnpm -r --workspace-concurrency=1 test",
     "lint": "pnpm -r --workspace-concurrency=1 lint",
     "lint:fix": "pnpm -r lint:fix",
-    "format": "prettier --write --html-whitespace-sensitivity ignore",
     "docs:generate-typescript-docs": "node --import @deenruv/ts-node-register scripts/docs/generate-typescript-docs.ts",
     "docs:generate-graphql-docs": "node --import @deenruv/ts-node-register scripts/docs/generate-graphql-docs.ts --api=shop && node --import @deenruv/ts-node-register scripts/docs/generate-graphql-docs.ts --api=admin",
     "docs:build": "pnpm docs:generate-typescript-docs && pnpm docs:generate-graphql-docs",
@@ -69,7 +68,6 @@
     "husky": "^4.3.0",
     "klaw-sync": "^6.0.0",
     "lint-staged": "^10.5.4",
-    "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
     "rollup": "^4.18.0",
     "tinybench": "^2.6.0",
@@ -97,6 +95,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-tailwindcss": "^3.18.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "graphql": "~16.9.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.22.5",
