--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -56,7 +56,8 @@
     "dayjs": "^1.11.10",
     "progress": "^2.0.3",
     "typeorm": "^0.3.20",
-    "tsx": "^4.19.1"
+    "tsx": "^4.19.1",
+    "pg": "^8.11.3"
   },
   "peerDependencies": {
     "typeorm": "^0.3.20"
