--- a/plugins/inpost-plugin/src/plugin-server/tsconfig.json
+++ b/plugins/inpost-plugin/src/plugin-server/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "noLib": false,
